fixed uneven cells

--- a/front-end/pages/sudoku-page/sudoku.css
+++ b/front-end/pages/sudoku-page/sudoku.css
@@ -14,10 +14,11 @@
 
 .sudoku_Block_class {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-rows: repeat(3, 1fr); /* same as 1fr 1fr 1fr. fr = fraction of available space. E.g. 3fr / 300px = 100px each */
+    grid-template-columns: repeat(3, 1fr);
     gap: 2px;
     margin: 2px;
-    background-color: white;
+    background-color: #D9E8FF;
 }
 
 #main_Content {
@@ -34,6 +35,7 @@
     margin: 0px;
     display: block;
     text-align: center;
+    background-color: white;
 }
 
 body {
